# Tk-Path-Finder

./: LICENSE  README.md  notes.db  plan.txt  pyproject.toml  tk_path_finder_config.json
src/: about_screen.py  address_bar.py  branch_tab.py  config_file_manager.py  csv_plugin_example.csv  diary_backend.py  diary_frontend.py  explorer_backend.py  file_comparison.py  main.py  notebook_test.py  notes.db  notes_backend.py  notes_frontend.py  paste_windows.py  rename_window.py  root_tab.py  search_window.py  settings_screen.py  sidebar_tree.py  tk_path_finder_config.json  tk_path_finder_config_backup1.json  tk_path_finder_config_backup2.json  tk_path_finder_config_backup3.json  tk_path_finder_config_backup4.json  tk_path_finder_config_backup5.json  tkexplorer_icons.py  todo_list.py  treeview_functions.py  undo_redo.py
src/Custom_Widgets/: address_bar.py  branch_tab.py  custom_titlebar.py  quick_access_tree.py  root_tab.py  sidebar_tree.py
src/Tools/: diary_backend.py  diary_frontend.py  notes_backend.py  notes_frontend.py  pdf_tools_backend.py  pdf_tools_frontend.py
src/controller/: controller.py
src/custom_widgets/: address_bar.py  autoscrollbar.py  branch_tab.py  quick_access_tree.py  root_tab.py
src/model/: branch_tab_model.py  config_file_manager.py  diary_model.py  model.py  quick_access_tree_model.py
src/view/: about_window.py  diary_window.py  filter_windows.py  icon_window.py  link_window.py  menubar.py  new_folders_window.py  pdf_tools_windows.py  rename_window.py  search_window.py  settings_window.py  tkexplorer_icons.py  todo_list.py  view.py  (+1 more)
(+2 files in other folders)
